kubernetes/tomcat/helloworld-service-loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: helloworld-service
spec:
  type: LoadBalancer
  selector:
    app: helloworld
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
