kubernetes/tomcat/helloworld-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: helloworld-service
spec:
  type: NodePort
  selector:
    app: helloworld
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
